--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "7.2.0",
     "@capacitor/keyboard": "7.0.1",
+    "@capacitor/live-updates": "^0.4.0",
     "@capacitor/status-bar": "7.0.1",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
