--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@capacitor/app": "7.0.1",
     "@capacitor/core": "^7.3.0",
+    "@capacitor/device": "^7.0.1",
     "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "7.2.0",
     "@capacitor/keyboard": "7.0.1",
