--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "dk.fdf.seniorfestival"
+    namespace "dk.fdf.seniorfestival.g2"
     compileSdk rootProject.ext.compileSdkVersion
     defaultConfig {
-        applicationId "dk.fdf.seniorfestival"
+        applicationId "dk.fdf.seniorfestival.g2"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "2025"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         aaptOptions {
              // Files and dirs to omit from the packaged assets dir, modified to accommodate modern web apps.
