Add local storage to increase app init time

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/live-updates": "^0.4.0",
     "@capacitor/status-bar": "7.0.1",
+    "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
