--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
     "ionicons": "^7.0.0",
+    "onesignal-cordova-plugin": "^5.2.15",
     "pinia": "^3.0.3",
     "vue": "^3.3.0",
     "vue-router": "^4.2.0"
