--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "seniorfestival",
   "private": true,
-  "version": "0.0.1",
+  "version": "2025.6",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -14,10 +14,10 @@
   "dependencies": {
     "@capacitor/android": "7.2.0",
     "@capacitor/app": "7.0.1",
-    "@capacitor/core": "^7.3.0",
+    "@capacitor/core": "^7.4.2",
     "@capacitor/device": "^7.0.1",
     "@capacitor/haptics": "7.0.1",
-    "@capacitor/ios": "7.2.0",
+    "@capacitor/ios": "7.4.2",
     "@capacitor/keyboard": "7.0.1",
     "@capacitor/live-updates": "^0.4.0",
     "@capacitor/status-bar": "7.0.1",
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@capacitor/assets": "^3.0.5",
-    "@capacitor/cli": "7.2.0",
+    "@capacitor/cli": "7.4.2",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.3.0",
@@ -46,5 +46,5 @@
     "vitest": "^0.34.6",
     "vue-tsc": "^2.1.10"
   },
-  "description": "An Ionic project"
+  "description": "Seniorfestival App"
 }
