--- a/android/app/capacitor.build.gradle
+++ b/android/app/capacitor.build.gradle
@@ -15,6 +15,7 @@ dependencies {
     implementation project(':capacitor-keyboard')
     implementation project(':capacitor-live-updates')
     implementation project(':capacitor-status-bar')
+    implementation project(':capacitor-plugin-safe-area')
     implementation "com.onesignal:OneSignal:5.1.35"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.7.10"
 }
