--- a/android/capacitor.settings.gradle
+++ b/android/capacitor.settings.gradle
@@ -19,3 +19,6 @@ project(':capacitor-live-updates').projectDir = new File('../node_modules/@capac
 
 include ':capacitor-status-bar'
 project(':capacitor-status-bar').projectDir = new File('../node_modules/@capacitor/status-bar/android')
+
+include ':capacitor-plugin-safe-area'
+project(':capacitor-plugin-safe-area').projectDir = new File('../node_modules/capacitor-plugin-safe-area/android')
