--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic/storage": "^4.0.0",
     "@ionic/vue": "^8.0.0",
     "@ionic/vue-router": "^8.0.0",
+    "capacitor-plugin-safe-area": "^4.0.0",
     "ionicons": "^7.0.0",
     "onesignal-cordova-plugin": "^5.2.15",
     "pinia": "^3.0.3",
